// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationField/Mobile Context Blank smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="from"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="from"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context GeocoderNoResults smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="from"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="from"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context GeocoderUnreachable smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="from"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="from"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context LocationUnavailable smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="from"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="from"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
    Current location not available
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-hidden="true"
        aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M367.2 412.5 99.5 144.8C77.1 176.1 64 214.5 64 256c0 106 86 192 192 192 41.5 0 79.9-13.1 111.2-35.5zm45.3-45.3C434.9 335.9 448 297.5 448 256c0-106-86-192-192-192-41.5 0-79.9 13.1-111.2 35.5l267.7 267.7zM512 256c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Current location not available
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context SelectedLocation smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value="123 Main St"
  >
  <button aria-label="Clear location"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__ClearButton-sc-xahsq2-2 hoozke cCkuXw"
  >
    <svg viewbox="0 0 320 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
    >
      <path fill="currentColor"
            d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3l105.4 105.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256l105.3-105.4z"
      >
      </path>
    </svg>
  </button>
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context SelectedLocationCustomClear smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value="123 Main St"
  >
  <button aria-label="Clear location"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__ClearButton-sc-xahsq2-2 hoozke cCkuXw"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
    >
      <path fill="currentColor"
            d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
      >
      </path>
    </svg>
  </button>
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context SlowGeocoder smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="from"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="from"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context Styled smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji Mobilestory__StyledLocationField-sc-1kqdrv5-0 klgtTw"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="from"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="from"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context WithCustomIcons smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 640 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
    >
      <path fill="currentColor"
            d="M.3 166.9 0 68c0-10.3 9.5-17.9 19.5-15.7l35.6 7.9c10.6 2.3 19.2 9.9 23 20L96 128l127.3 37.6-41.5-145.2C178.9 10.2 186.6 0 197.2 0h40.1c11.6 0 22.2 6.2 27.9 16.3l109 193.8 107.2 31.7c15.9 4.7 30.8 12.5 43.7 22.8l34.4 27.6c24 19.2 18.1 57.3-10.7 68.2-41.2 15.6-86.2 18.1-128.8 7l-298.3-77.6c-11.1-2.9-21.2-8.7-29.3-16.9L9.5 189.4c-5.9-6-9.3-14-9.3-22.5zM32 448h576c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32zm160-80c0 17.7-14.3 32-32 32s-32-14.3-32-32 14.3-32 32-32 32 14.3 32 32zm64 48c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      Nearby Stops
    </h2>
    <li aria-live="off"
        id="1"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__StopIconAndDistanceContainer-sc-xahsq2-19 jwHZuF">
        <svg viewbox="0 0 512 512"
             height="13"
             width="13"
             aria-hidden="true"
             focusable="false"
             fill="currentColor"
             xmlns="http://www.w3.org/2000/svg"
             class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
        >
          <path fill="currentColor"
                d="M224 32H64c-17.7 0-32 14.3-32 32v64c0 17.7 14.3 32 32 32h377.4c4.2 0 8.3-1.7 11.3-4.7l48-48c6.2-6.2 6.2-16.4 0-22.6l-48-48c-3-3-7.1-4.7-11.3-4.7H288c0-17.7-14.3-32-32-32s-32 14.3-32 32zm256 224c0-17.7-14.3-32-32-32H288v-32h-64v32H70.6c-4.2 0-8.3 1.7-11.3 4.7l-48 48c-6.2 6.2-6.2 16.4 0 22.6l48 48c3 3 7.1 4.7 11.3 4.7H448c17.7 0 32-14.3 32-32v-64zM288 480v-96h-64v96c0 17.7 14.3 32 32 32s32-14.3 32-32z"
          >
          </path>
        </svg>
        <span class="styled__StopDistance-sc-xahsq2-18 dikZwS">
          404 ft
        </span>
      </span>
      <span class="styled__StopContentContainer-sc-xahsq2-17 gaHWbQ">
        <span class="styled__StopName-sc-xahsq2-20 gqVeRv">
          1st &amp; Main (1)
        </span>
        <span class="styled__StopRoutes-sc-xahsq2-21 coIaiw">
          <span class="styled__RouteName-sc-xahsq2-15 fokEYr">
            1
          </span>
        </span>
      </span>
      <div class="styled__ClearBoth-sc-xahsq2-3 gMCZXA">
      </div>
    </li>
    <li aria-live="off"
        id="2"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__StopIconAndDistanceContainer-sc-xahsq2-19 jwHZuF">
        <svg viewbox="0 0 512 512"
             height="13"
             width="13"
             aria-hidden="true"
             focusable="false"
             fill="currentColor"
             xmlns="http://www.w3.org/2000/svg"
             class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
        >
          <path fill="currentColor"
                d="M224 32H64c-17.7 0-32 14.3-32 32v64c0 17.7 14.3 32 32 32h377.4c4.2 0 8.3-1.7 11.3-4.7l48-48c6.2-6.2 6.2-16.4 0-22.6l-48-48c-3-3-7.1-4.7-11.3-4.7H288c0-17.7-14.3-32-32-32s-32 14.3-32 32zm256 224c0-17.7-14.3-32-32-32H288v-32h-64v32H70.6c-4.2 0-8.3 1.7-11.3 4.7l-48 48c-6.2 6.2-6.2 16.4 0 22.6l48 48c3 3 7.1 4.7 11.3 4.7H448c17.7 0 32-14.3 32-32v-64zM288 480v-96h-64v96c0 17.7 14.3 32 32 32s32-14.3 32-32z"
          >
          </path>
        </svg>
        <span class="styled__StopDistance-sc-xahsq2-18 dikZwS">
          0.2 mi
        </span>
      </span>
      <span class="styled__StopContentContainer-sc-xahsq2-17 gaHWbQ">
        <span class="styled__StopName-sc-xahsq2-20 gqVeRv">
          Main &amp; 2nd (2)
        </span>
        <span class="styled__StopRoutes-sc-xahsq2-21 coIaiw">
          <span class="styled__RouteName-sc-xahsq2-15 fokEYr">
            2
          </span>
        </span>
      </span>
      <div class="styled__ClearBoth-sc-xahsq2-3 gMCZXA">
      </div>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      Recently Searched
    </h2>
    <li aria-live="off"
        id="recent-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 512C114.6 512 0 397.4 0 256S114.6 0 256 0s256 114.6 256 256-114.6 256-256 256zm-24-392v136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          123 Main St
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      My Places
    </h2>
    <li aria-live="off"
        id="user-saved-Home-(456-Suburb-St)"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 576 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M316.9 18c-5.3-11-16.5-18-28.8-18s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329l-24.6 145.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329l104.2-103.1c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7l-143.7-21.2L316.9 18z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Home (456 Suburb St)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="user-saved-Work-(789-Busy-St)"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 384 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M48 0C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h96v-80c0-26.5 21.5-48 48-48s48 21.5 48 48v80h96c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48H48zm16 240c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-32zm112-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16v-32c0-8.8 7.2-16 16-16zm80 16c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16v-32zM80 96h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-32c0-8.8 7.2-16 16-16zm80 16c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16v-32zm112-16h32c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16v-32c0-8.8 7.2-16 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Work (789 Busy St)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="user-saved-Coffee-Roasters-Shop,-55-Coffee-Street"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 576 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M316.9 18c-5.3-11-16.5-18-28.8-18s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329l-24.6 145.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329l104.2-103.1c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7l-143.7-21.2L316.9 18z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Coffee Roasters Shop, 55 Coffee Street
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="user-saved-123-Main-St"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 576 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M316.9 18c-5.3-11-16.5-18-28.8-18s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329l-24.6 145.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329l104.2-103.1c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7l-143.7-21.2L316.9 18z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          123 Main St
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c17.7 0 32 14.3 32 32v10.4c93.7 13.9 167.7 88 181.6 181.6H480c17.7 0 32 14.3 32 32s-14.3 32-32 32h-10.4c-13.9 93.7-88 167.7-181.6 181.6V480c0 17.7-14.3 32-32 32s-32-14.3-32-32v-10.4C130.3 455.7 56.3 381.7 42.4 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32h10.4C56.3 130.3 130.3 56.3 224 42.4V32c0-17.7 14.3-32 32-32zM107.4 288c12.5 58.3 58.4 104.1 116.6 116.6V384c0-17.7 14.3-32 32-32s32 14.3 32 32v20.6c58.3-12.5 104.1-58.4 116.6-116.6H384c-17.7 0-32-14.3-32-32s14.3-32 32-32h20.6c-12.5-58.3-58.3-104.1-116.6-116.6V128c0 17.7-14.3 32-32 32s-32-14.3-32-32v-20.6c-58.3 12.5-104.1 58.3-116.6 116.6H128c17.7 0 32 14.3 32 32s-14.3 32-32 32h-20.6zm148.6 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context WithNearbyStops smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      Nearby Stops
    </h2>
    <li aria-live="off"
        id="1"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__StopIconAndDistanceContainer-sc-xahsq2-19 jwHZuF">
        <svg viewbox="0 0 512 512"
             height="13"
             width="13"
             aria-hidden="true"
             focusable="false"
             fill="currentColor"
             xmlns="http://www.w3.org/2000/svg"
             class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
        >
          <path fill="currentColor"
                d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
          >
          </path>
        </svg>
        <span class="styled__StopDistance-sc-xahsq2-18 dikZwS">
          404 ft
        </span>
      </span>
      <span class="styled__StopContentContainer-sc-xahsq2-17 gaHWbQ">
        <span class="styled__StopName-sc-xahsq2-20 gqVeRv">
          1st &amp; Main (1)
        </span>
        <span class="styled__StopRoutes-sc-xahsq2-21 coIaiw">
          <span class="styled__RouteName-sc-xahsq2-15 fokEYr">
            1
          </span>
        </span>
      </span>
      <div class="styled__ClearBoth-sc-xahsq2-3 gMCZXA">
      </div>
    </li>
    <li aria-live="off"
        id="2"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__StopIconAndDistanceContainer-sc-xahsq2-19 jwHZuF">
        <svg viewbox="0 0 512 512"
             height="13"
             width="13"
             aria-hidden="true"
             focusable="false"
             fill="currentColor"
             xmlns="http://www.w3.org/2000/svg"
             class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
        >
          <path fill="currentColor"
                d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
          >
          </path>
        </svg>
        <span class="styled__StopDistance-sc-xahsq2-18 dikZwS">
          0.2 mi
        </span>
      </span>
      <span class="styled__StopContentContainer-sc-xahsq2-17 gaHWbQ">
        <span class="styled__StopName-sc-xahsq2-20 gqVeRv">
          Main &amp; 2nd (2)
        </span>
        <span class="styled__StopRoutes-sc-xahsq2-21 coIaiw">
          <span class="styled__RouteName-sc-xahsq2-15 fokEYr">
            2
          </span>
        </span>
      </span>
      <div class="styled__ClearBoth-sc-xahsq2-3 gMCZXA">
      </div>
    </li>
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context WithSessionSearches smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      Recently Searched
    </h2>
    <li aria-live="off"
        id="recent-0"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M416 208c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208zM208 352c79.5 0 144-64.5 144-144S287.5 64 208 64 64 128.5 64 208s64.5 144 144 144z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          123 Main St
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Mobile Context WithUserSettings smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 styled__StaticMenuItemList-sc-xahsq2-16 eCrJvo GkRdl"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      My Places
    </h2>
    <li aria-live="off"
        id="user-saved-Home-(456-Suburb-St)"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 576 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40h-16c-1.1 0-2.2 0-3.3-.1-1.4.1-2.8.1-4.2.1H392c-22.1 0-40-17.9-40-40v-88c0-17.7-14.3-32-32-32h-64c-17.7 0-32 14.3-32 32v88c0 22.1-17.9 40-40 40h-55.9c-1.5 0-3-.1-4.5-.2-1.2.1-2.4.2-3.6.2h-16c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9.1-2.8v-69.6H32c-18 0-32-14-32-32.1 0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7l255.4 224.5c8 7 12 15 11 24z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Home (456 Suburb St)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="user-saved-Work-(789-Busy-St)"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M184 48h144c4.4 0 8 3.6 8 8v40H176V56c0-4.4 3.6-8 8-8zm-56 8v40H64c-35.3 0-64 28.7-64 64v96h512v-96c0-35.3-28.7-64-64-64h-64V56c0-30.9-25.1-56-56-56H184c-30.9 0-56 25.1-56 56zm384 232H320v32c0 17.7-14.3 32-32 32h-64c-17.7 0-32-14.3-32-32v-32H0v128c0 35.3 28.7 64 64 64h384c35.3 0 64-28.7 64-64V288z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Work (789 Busy St)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="user-saved-Coffee-Roasters-Shop,-55-Coffee-Street"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 384 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M384 192c0 87.4-117 243-168.3 307.2-12.3 15.3-35.1 15.3-47.4 0C117 435 0 279.4 0 192 0 86 86 0 192 0s192 86 192 192z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Coffee Roasters Shop, 55 Coffee Street
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="user-saved-123-Main-St"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 384 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M384 192c0 87.4-117 243-168.3 307.2-12.3 15.3-35.1 15.3-47.4 0C117 435 0 279.4 0 192 0 86 86 0 192 0s192 86 192 192z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          123 Main St
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;
